# zero2prod

./: Cargo.toml  Dockerfile
.github/workflows/: rust.yml
.sqlx/: query-49d865f2c37efa35b3738135d1b05ef6e8b824449ae3dbbd29f5aa0ab72aa650.json
scripts/: init_db.sh
src/: configuration.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
